samples/_failures_safe/1761646583_7f6181_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2aac870a.c: In function ‘main’:
./samples/SAFE/__tmp_2aac870a.c:184:9: error: expected expression at end of input
  184 |         if (token.type == TOKEN_ERROR)
      |         ^~
./samples/SAFE/__tmp_2aac870a.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2aac870a.c:184:9: error: expected declaration or statement at end of input
